--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,9 +5,7 @@
     <meta charset="utf-8">
     <title>{{ title }}</title>
     <link rel="stylesheet" href="css/styles.css" media="screen">
-    <link rel="stylesheet" href="css/locations.css" media="screen">    
-    <script>console.info('hello1')</script>
-    <script src="javascripts/script.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="css/locations.css" media="screen">
 </head>
 
 <body class="body">
@@ -30,22 +28,24 @@
                 <div class="location-menu__button button"></div>
             </div>
             <nav class="location-menu__nav horizontal-flex">
-
                 <div class="location-menu__switch show-all-button button">All</div>
                 <div class="location-menu__switch show-not-visited-button button">Not visited</div>
                 <div class="location-menu__switch show-visited-button button">Visited</div>
             </nav>
         </div>
         <hr class="horizontal-line">
-        {{#each places}}
-            <article class="location horizontal-flex">{{> location }}</article>
-        {{/each}}
-        <hr class="horizontal-line">        
+        <section class="locations-list">
+            {{#each places}}
+                <article class="location horizontal-flex">{{> location }}</article>
+            {{/each}}
+        </section>
+        <hr class="horizontal-line">
         <footer class="footer horizontal-flex">
             <div class="footer__year">{{ year }}</div>
             <div class="footer__copyright">{{ copyright }}</div>
         </footer>
     </section>
+    <script src="javascripts/script.js" type="text/javascript"></script>    
 </body>
 
 </html>
