Delete all and swap are working now. But I need to refresh page manually to see the result.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -91,7 +91,7 @@
     justify-content: space-between;
 }
 
-.location-menu__button
+.location-menu__delete-button
 {
     position: relative;
     border: 2px solid #e0e0f8;
