--- a/views/index.hbs
+++ b/views/index.hbs
@@ -25,7 +25,7 @@
         <div class="location-menu horizontal-flex">
             <div class="location-menu__main horizontal-flex">
                 <header class="location-menu__header">Locations</header>
-                <div class="location-menu__button button"></div>
+                <div class="location-menu__delete-button button"></div>
             </div>
             <nav class="location-menu__nav horizontal-flex">
                 <div class="location-menu__switch show-all-button button">All</div>
