--- a/views/partials/location.hbs
+++ b/views/partials/location.hbs
@@ -2,11 +2,11 @@
 
 <div class="arrows horizontal-flex">
     {{#if this.arrowUp}}
-        <div class="arrow-up button"></div>
+        <div class="arrow-up button arrow"></div>
     {{/if}}
 
     {{#if this.arrowDown}}
-        <div class="arrow-down button"></div>
+        <div class="arrow-down button arrow"></div>
     {{/if}}
 </div>
 
