--- a/views/partials/location.hbs
+++ b/views/partials/location.hbs
@@ -1,3 +1,8 @@
+<div class="hidden-options horizontal-flex">
+    <div class="hidden-options__pencil button"></div>
+    <div class="hidden-options__trash button"></div>
+</div>
+
 <div class="location-name">{{ this.name }}</div>
 
 <div class="arrows horizontal-flex">
