Rewrote logic of correctArrows so it works in any case. Using switch case in onClickHandlerDisplay.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -36,7 +36,7 @@
         <hr class="horizontal-line">
         <section class="locations-list">
             {{#each places}}
-                <article class="location horizontal-flex">{{> location }}</article>
+                <article class="location horizontal-flex visible">{{> location }}</article>
             {{/each}}
         </section>
         <hr class="horizontal-line">
