--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
-    <meta charset="{{ meta.charset }}">
-    <title>{{ title }}</title>
-    <meta name="description" content="{{ meta.description }}">
+    <meta charset="utf-8">
+    <title>webdev-task-3</title>
+    <meta name="description" content="webdev-task-3">
     <link rel="stylesheet" href="/index.css" media="screen">
-
 </head>
 
 <body class="body">
@@ -23,13 +22,8 @@
     <label for="toVisit">Посетить</label>
     <input type="radio" id="visited" name="contact" value="Посещённые">
     <label for="visited">Посещённые</label>
-    <hr>
-    <ul class="places-list">
-    </ul>
-    <hr>
-    <footer class="footer">
-        {{footer}}
-    </footer>
+    <ul class="places-list"></ul>
+    <footer class="footer">2018</footer>
     <script src="script.js"></script>
 </body>
 
