--- a/public/main.css
+++ b/public/main.css
@@ -55,6 +55,25 @@
     flex-grow: 1;
 }
 
+.arrows__up {
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+	transform: rotate(-135deg);
+    -webkit-transform: rotate(-135deg);
+	margin-right: 10px;
+}
+
+.arrows__down {
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+	transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+}
+
 .place__visited {
     flex-grow: 1;
 }
