--- a/views/index.hbs
+++ b/views/index.hbs
@@ -36,7 +36,6 @@
             <date class="footer__date">2018</date>
         </footer>
     </div>
-    <script src="/js/api.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="/build/app.bundle.js"></script>
 </body>
 </html>
