--- a/public/index.css
+++ b/public/index.css
@@ -4,7 +4,9 @@
   margin: 0 auto;
   padding: 10px 20px;
   border: 1px solid;
+  border-radius: 5px;
   color: #2ea4ed;
+  box-shadow: 0 0 5px #2ea4ed;
 }
 .header {
   display: flex;
@@ -116,6 +118,146 @@
 .places__sort-option-label:hover {
   background-color: #e7e7e7;
 }
+.places__list {
+  padding: 0;
+}
+.place {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  border: 1px solid #2ea4ed;
+  padding: 5px 10px;
+  background: #fff;
+  border-radius: 5px;
+  cursor: move;
+}
+.place.over::before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background: #2ea4ed;
+  bottom: -7px;
+  left: 0;
+  right: 0;
+}
+.place:not(:last-child) {
+  margin-bottom: 10px;
+}
+.place__name {
+  border: none;
+  margin: 0;
+  width: 50%;
+  background: #e7e7e7;
+  outline: none;
+  text-align: center;
+  font-size: 1.5rem;
+  color: #2ea4ed;
+}
+.place__name:disabled {
+  background: #fff;
+  cursor: move;
+}
+.place__check-holder {
+  align-self: center;
+}
+.place__check {
+  display: none;
+}
+.place__check:checked + label::before {
+  opacity: 1;
+}
+.place__label {
+  position: relative;
+  display: block;
+  width: 20px;
+  height: 20px;
+  border: 1px solid #2ea4ed;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+.place__label:hover {
+  background: #e7e7e7;
+}
+.place__label::before {
+  content: '';
+  opacity: 0;
+  top: 3px;
+  left: 3px;
+  position: absolute;
+  width: 14px;
+  height: 14px;
+  border-radius: 20px;
+  background-color: #2ea4ed;
+  transition: opacity 0.2s;
+}
+.place__change {
+  background: url("media/red.svg") no-repeat;
+}
+.place__delete {
+  background: url("media/delete.svg") no-repeat;
+}
+.place__cancel {
+  display: none;
+  background: url("media/cancel.svg") no-repeat;
+}
+.place__confirm {
+  display: none;
+  background: url("media/confirm.svg") no-repeat;
+}
+.place__change,
+.place__delete,
+.place__cancel,
+.place__confirm {
+  width: 24px;
+  height: 24px;
+  border: none;
+  outline: none;
+  background-size: contain;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+.place__change:hover,
+.place__delete:hover,
+.place__cancel:hover,
+.place__confirm:hover {
+  background-color: #e7e7e7;
+}
+.place__button-group {
+  display: flex;
+  align-items: center;
+  align-self: center;
+  opacity: 0;
+  transition: opacity 0.2s;
+}
+.place:hover .place__button-group {
+  opacity: 1;
+}
 .main {
   margin-bottom: 20px;
+}
+.footer {
+  display: flex;
+  justify-content: space-between;
+}
+#container {
+  position: relative;
+  min-height: 50px;
+}
+#loading {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(255, 255, 255, 0.7) url("media/loading.svg") no-repeat center;
+  background-size: 50px 50px;
+}
+.not-found {
+  height: 50px;
+  line-height: 50px;
+  color: #f00;
+  text-align: center;
 }
