--- a/public/index.less
+++ b/public/index.less
@@ -1,4 +1,5 @@
 @main-color: #2ea4ed;
+@hover-color: #e7e7e7;
 
 .app {
     width: 100%;
@@ -7,7 +8,9 @@
     padding: 10px 20px;
     border: 1px solid;
 
+    border-radius: 5px;
     color: @main-color;
+    box-shadow: 0 0 5px @main-color;
 }
 
 ._input-theme(@color) {
@@ -156,11 +159,182 @@
         }
 
         &:hover {
-            background-color: #e7e7e7;
+            background-color: @hover-color;
         }
+    }
+}
+
+.places__list {
+    padding: 0;
+}
+
+.place {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid @main-color;
+    padding: 5px 10px;
+
+    background: #fff;
+    border-radius: 5px;
+    cursor: move;
+
+    &.over::before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        background: @main-color;
+        bottom: -7px;
+        left: 0;
+        right: 0;
+    }
+
+    &:not(:last-child) {
+        margin-bottom: 10px;
+    }
+
+    &__name {
+        border: none;
+        margin: 0;
+        width: 50%;
+
+        background: @hover-color;
+        outline: none;
+        text-align: center;
+        font-size: 1.5rem;
+        color: @main-color;
+
+        &:disabled {
+            background: #fff;
+            cursor: move;
+        }
+    }
+
+    &__check-holder {
+        align-self: center;
+    }
+
+    &__check {
+        display: none;
+
+        &:checked + label::before {
+            opacity: 1;
+        }
+    }
+
+    &__label {
+        position: relative;
+        display: block;
+        width: 20px;
+        height: 20px;
+        border: 1px solid @main-color;
+
+        border-radius: 20px;
+        cursor: pointer;
+
+        transition: background-color 0.2s;
+
+        &:hover {
+            background: @hover-color;
+        }
+
+        &::before {
+            content: '';
+            opacity: 0;
+            top: 3px;
+            left: 3px;
+            position: absolute;
+            width: 14px;
+            height: 14px;
+
+            border-radius: 20px;
+            background-color: @main-color;
+
+            transition: opacity 0.2s;
+        }
+    }
+
+    &__change {
+        background: url("./media/red.svg") no-repeat;
+    }
+
+    &__delete {
+        background: url("./media/delete.svg") no-repeat;
+    }
+
+    &__cancel {
+        display: none;
+        background: url("./media/cancel.svg") no-repeat;
+    }
+
+    &__confirm {
+        display: none;
+        background: url("./media/confirm.svg") no-repeat;
+    }
+
+    &__change,
+    &__delete,
+    &__cancel,
+    &__confirm {
+        width: 24px;
+        height: 24px;
+        border: none;
+
+        outline: none;
+        background-size: contain;
+        border-radius: 3px;
+        cursor: pointer;
+
+        transition: background-color 0.2s;
+
+        &:hover {
+            background-color: @hover-color;
+        }
+    }
+
+    &__button-group {
+        display: flex;
+        align-items: center;
+        align-self: center;
+        opacity: 0;
+
+        transition: opacity 0.2s;
+    }
+
+    &:hover &__button-group {
+        opacity: 1;
     }
 }
 
 .main {
     margin-bottom: 20px;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+#container {
+    position: relative;
+    min-height: 50px;
+}
+
+#loading {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(255, 255, 255, 0.7) url("./media/loading.svg") no-repeat center;
+    background-size: 50px 50px;
+}
+
+.not-found {
+    height: 50px;
+
+    line-height: 50px;
+    color: #f00;
+    text-align: center;
 }
