--- a/public/index.css
+++ b/public/index.css
@@ -14,6 +14,10 @@ main {
     padding-left: 5px;
 }
 
+.place__name {
+    padding-left: 10px;
+}
+
 .visibility-selectors {
     font-size: 0;
     display: inline;
@@ -48,6 +52,10 @@ main {
     border-radius: 20px;
 }
 
+.places__container {
+    min-height: 300px;
+}
+
 .places__header {
     border-bottom: 2px solid black;
     padding-bottom: 2px;
@@ -70,7 +78,8 @@ main {
 }
 
 .place__edit__input {
-    font-size: 1.5em;
+    font-size: 1em;
+    width: 200px;
 }
 
 .icon_hidden {
@@ -90,37 +99,53 @@ i:hover {
     cursor: pointer;
 }
 
+.place__swap {
+    float: right;
+    padding-right: 10px;
+}
+
 .place__visited {
     float: right;
 }
 
+.place__name_visited {
+    text-decoration: line-through;
+}
+
 .footer__author {
-    float: right;
+    position: absolute;
+    top: 5px;
+    right: 10px;
 }
 
 .footer__year {
-    float: left;
+    position: absolute;
+    top: 5px;
+    left: 10px;
 }
 
 .footer {
+    position: relative;
     border-top: 2px solid black;
     height: 30px;
 }
 
 .search-field {
-    width: 250px;
+    width: 320px;
     margin: auto;
-    margin: 10px;
+    margin: 20px;
     font-size: 1.2em;
     padding-left: 5px;
 }
 
 .place__edit {
-    font-size: 0.65em;
     padding: 0 5px;
 }
 
 .place__delete {
-    font-size: 0.65em;
     padding: 0 5px;
+}
+
+.place__edit__cancel {
+    padding: 0 10px;
 }
