Added search behavior and places' filters.

--- a/stylus/filter-places.styl
+++ b/stylus/filter-places.styl
@@ -42,5 +42,9 @@ $buttonsHeight = 40px;
                 border-radius: 0 ($buttonsHeight / 2) ($buttonsHeight / 2) 0;
             }
         }
+
+        &_selected {
+            background-color: #ecc2c2;
+        }
     }
 }
