--- a/views/places/__place/places__place.html
+++ b/views/places/__place/places__place.html
@@ -2,7 +2,9 @@
     <span class="places__place-delete-control" hidden>&times;</span>
     <span class="places__place-edit-control" hidden>&#9998;</span>
     <span class="places__place-description"></span>
-    <span class="places__place-up-arrow">&uarr;</span>
-    <span class="places__place-down-arrow">&darr;</span>
+    <div class="places__move-controls">
+        <span class="places__place-up-arrow">&uarr;</span>
+        <span class="places__place-down-arrow">&darr;</span>
+    </div>
     <input type="checkbox" class="places__place-isVisited-checkbox">
 </div>
