--- a/views/places/__place/places__place.scss
+++ b/views/places/__place/places__place.scss
@@ -57,4 +57,12 @@
         left: 0;
         top: -1px;
     }
+
+    &__place:first-child .places__place-up-arrow{
+        display: none;
+    }
+
+    &__place:last-child .places__place-down-arrow{
+        display: none;
+    }
 }
