--- a/public/css/index.css
+++ b/public/css/index.css
@@ -3,7 +3,7 @@ body
     margin: 0;
 }
 
-main 
+.web-dev-task-3 
 {
     display: grid;
     grid-template-rows: auto auto 1fr 50px;
@@ -18,13 +18,6 @@ main
     padding: 20px 0;
 }
 
-input,
-button
-{
-    outline: none;
-    background: white;
-}
-
 .create-place__input,
 .create-place__button,
 .search-place__input
@@ -33,6 +26,8 @@ button
     border-radius: 15px;
     border: 1px solid black;
     height: 40px;
+    outline: none;
+    background: white;
 }
 
 .search-place__input
@@ -88,7 +83,7 @@ button
 {
     display: inline-block;
     padding: 5px 20px;
-    border: 1px solid black; 
+    border: 1px solid black;
     cursor: pointer;
 }
 
@@ -141,6 +136,8 @@ button
 .place__name
 {
     border: none;
+    outline: none;
+    background: white;
 }
 
 .place:first-of-type > .place__swap-up,
