Added moving places behavior and some cosmetics.

--- a/stylus/create-place.styl
+++ b/stylus/create-place.styl
@@ -3,19 +3,19 @@ $fontSize = 20px;
     display: flex;
     align-items: center;
     margin: 30px 0;
-
+    
     &__input {
         font-size: $fontSize;
-        height: 40px;
-        padding: 0 40px;
+        line-height: 40px;
+        padding: 0 20px;
         border: 1px solid #333;
         flex: auto;
     }
 
     &__button {
         font-size: $fontSize;
+        line-height: 40px;
         margin-left: 10px;
-        height: 40px;
         border-radius: 20px;
         border: 1px solid #333;
         cursor: pointer;
