--- a/stylus/search.styl
+++ b/stylus/search.styl
@@ -3,7 +3,7 @@ $fontSize = 20px;
     top: 30px;
 
     &__input
-        height: 40px;
+        line-height: 40px;
         font-size: $fontSize;
         width: calc(100% - 80px);
         padding: 0 40px;
