--- a/stylus/filter-places.styl
+++ b/stylus/filter-places.styl
@@ -3,7 +3,7 @@ $buttonsHeight = 40px;
 .filter-places {
     display: flex;
     align-items: center;
-    border-bottom: 1px solid #333;
+    border-bottom: 1px solid #999;
     margin: 30px 0;
     padding-bottom: 7px;
     
@@ -23,7 +23,6 @@ $buttonsHeight = 40px;
         background: url('../images/rubbish-bin.png') no-repeat;
         border: 0;
         cursor: pointer;
-        align-self: baseline;
     }
 
     &__button {
@@ -37,9 +36,11 @@ $buttonsHeight = 40px;
         &_border-radius {
             &_left {
                 border-radius: ($buttonsHeight / 2) 0 0 ($buttonsHeight / 2);
+                border-right: none;
             }
             &_right {
                 border-radius: 0 ($buttonsHeight / 2) ($buttonsHeight / 2) 0;
+                border-left: none;
             }
         }
 
