--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -158,3 +158,12 @@
 {
     margin-right: 5px;
 }
+
+.error-message
+{
+    position: absolute;
+    width: 120px;
+    border: 2px solid #950000;
+    background-color: #fff;
+    color: #f00;
+}
