--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,6 +9,7 @@
 </head>
 
 <body class="body">
+    <div class="error-message hidden"></div>
     <section class="content position_center">
         <div class="search-bar position_center">
             <form class="search-form">
@@ -36,7 +37,7 @@
         <hr class="horizontal-line">
         <section class="locations-list">
             {{#each places}}
-                <article class="location horizontal-flex visible">{{> location }}</article>
+            <article class="location horizontal-flex visible">{{> location }}</article>
             {{/each}}
         </section>
         <hr class="horizontal-line">
@@ -46,5 +47,6 @@
         </footer>
     </section>
 </body>
+
 </html>
-<script src="javascripts/script.js" type="text/javascript"></script>    
+<script src="javascripts/script.js" type="text/javascript"></script>
