--- a/views/places/__place/places__place.html
+++ b/views/places/__place/places__place.html
@@ -6,5 +6,8 @@
         <span class="places__place-up-arrow">&uarr;</span>
         <span class="places__place-down-arrow">&darr;</span>
     </div>
-    <input type="checkbox" class="places__place-isVisited-checkbox">
+    <label class="places__place-isVisited-checkbox-label">
+        <input type="checkbox" class="places__place-isVisited-checkbox" id="isVisited-checkbox">
+        <span class="places__place-isVisited-span"></span>
+    </label>
 </div>
