--- a/views/add-form/add-form.scss
+++ b/views/add-form/add-form.scss
@@ -1,14 +1,20 @@
 .add-form {
     text-align: center;
-    margin-top: 10px;
+    margin-top: 5px;
     
     &__button {
         cursor: pointer;
         width: 100px;
+        height: 27px;
+        border-radius: 300px;
+        background-color: white;
+        border: 2px solid black;
         margin-right: 5px;
+        margin-left: 5px;
     }
 
     &__input {
+        height: 20px;
         width: 200px;
     }
 }
