--- a/views/search-form/search-form.scss
+++ b/views/search-form/search-form.scss
@@ -1,13 +1,24 @@
 .search-form {
+    position: relative;
     text-align: center;
+    margin-top: 10px;
+    margin-bottom: 15px;
 
     &__button {
         cursor: pointer;
-        width: 100px;
-        margin-right: 5px;
+        font-size: 18px;
+        position: absolute;
+        top: 1px;
+        left: 94px;
+        width: 30px;
+        background-color: white;
+        border: none;
+        padding: 0;
     }
 
     &__input {
-        width: 200px;
+        padding-left: 30px;
+        width: 280px;
+        height: 20px;
     }
 }
