--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,6 +10,7 @@
 
 <body class="body">
     <div class="error-message hidden"></div>
+    <div class="loader hidden"></div>
     <section class="content position_center">
         <div class="search-bar position_center">
             <form class="search-form">
