--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -167,3 +167,20 @@
     background-color: #fff;
     color: #f00;
 }
+
+.loader
+{
+    border: 16px solid #b8b8fc;
+    border-top: 16px solid #3a3a87;
+    border-radius: 50%;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin
+{
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
