--- a/public/index.css
+++ b/public/index.css
@@ -9,7 +9,7 @@ body {
     min-height: 100vh;
 
     font-family: 'Helvetica Neue', Arial, sans-serif;
-    font-weight: 200px;
+    font-weight: 200;
     color: #111;
 }
 
