--- a/public/css/2_new-place.css
+++ b/public/css/2_new-place.css
@@ -13,15 +13,10 @@
     font-size: 100%;
     margin: 0 10px 0 0;
     padding: 10px 0 0 10px;
-    border: 1px solid rgba(0, 0, 0, 0);
-    border-bottom: 1px solid var(--border-color);
+    border: 3px solid rgba(0, 0, 0, 0);
+    border-bottom: 3px solid var(--border-color);
     outline: none;
     background-color: transparent;
-}
-
-.new-place__name:focus
-{
-    border: 1px solid var(--border-color);
 }
 
 .new-place__description
@@ -31,20 +26,33 @@
     font-family: Antipasto;
     font-size: 80%;
     margin-top: 20px;
-    height: calc(var(--height-for-input-text)*.8);
+    height: calc(var(--height-for-input-text)*1.5);
     width: calc(var(--body-width) - 2*(var(--margin-for-content) + 4px));
     max-width: calc(var(--body-width) - 2*(var(--margin-for-content) + 4px));
     resize: both;
-    border: 1px solid rgba(0, 0, 0, 0);
-    border-bottom: 1px solid var(--border-color);
+    border: 3px solid rgba(0, 0, 0, 0);
+    border-bottom: 3px solid var(--border-color);
     box-sizing: border-box;
     outline: none;
     background-color: transparent;
 }
 
+.new-place__name:hover,
+.new-place__description:hover
+{
+    border: 3px solid #6af3;
+    border-bottom: 3px solid var(--border-color);
+    border-radius: 3px;
+    transition: .25s;
+}
+
+.new-place__name:focus,
 .new-place__description:focus
 {
-    border: 1px solid var(--border-color);
+    border: 3px solid var(--border-color);
+    border-radius: 3px;
+    transition: .25s;
+    transform: scale(1.05);
 }
 
 .new-place__create-button
@@ -53,9 +61,27 @@
     font-family: Antipasto;
     font-size: 100%;
     width: 80%;
-    /* background-color: transparent;
-    border: none;
-    background-image: url(/pics/create.png); */
-    background-size: 100%;
+    border: 1.5px solid var(--border-color);
+    border-radius: 24px;
+    background: radial-gradient(farthest-side at 10px 10px, #fff3, #60a0ff33);
+    background-color: transparent;
     margin: -3px 20px;
+    color: var(--text-color);
 }
+
+.new-place__create-button:hover
+{
+    box-shadow: 0 0 2px 1px var(--border-color);
+    cursor: pointer;
+}
+
+.new-place__create-button:focus
+{
+    outline: none;
+    transition: .3s;
+    box-shadow: 0 0 4px 2px var(--border-color);
+    animation: 0.8s pulse linear infinite;
+    animation-delay: .3s;
+}
+
+
