--- a/public/index.css
+++ b/public/index.css
@@ -18,6 +18,7 @@ html
     --standard-margin-from-hr: 10px;
     --global-font-size: 24px;
     --border-color: #60a0ff;
+    --text-color: #CCC;
 }
 
 body
@@ -28,7 +29,21 @@ body
     width: var(--body-width);
     border: 2px solid var(--border-color);
     border-radius: 3px;
-    /* background: rgb(255, 211, 145); */
+    color: var(--text-color);
+    background-image: url(pics/background.jpg);
+    background-attachment: fixed;
+    background-size: cover;
+}
+
+input,
+textarea
+{
+    color: var(--text-color);
+}
+
+::placeholder
+{
+    color: #CCC7;
 }
 
 hr
@@ -47,4 +62,38 @@ hr
 {
     border: 1px dashed var(--border-color);
     width: calc(var(--body-width) - 2*var(--margin-for-content));
+}
+
+@keyframes pulse {
+    50%
+    {
+        transform: scale(1.07)
+    }
+}
+
+@keyframes gradient-blink {
+    50%
+    {
+        background-color: var(--border-color);
+        box-shadow: inset -150px 0 75px -75px #60a0ffcc;
+    }
+}
+
+@keyframes greatPulse {
+    50%
+    {
+        transform: scale(1.3);
+    }
+}
+
+@keyframes jump {
+    0% {
+        transform: translateY(0px);
+    }
+    50% {
+        transform: translateY(-7px);
+    }
+    100% {
+        transform: translateY(0px);
+    }
 }
