--- a/public/index.css
+++ b/public/index.css
@@ -6,6 +6,27 @@
     display: inline-block;
 }
 
+.places__header-name
+{
+    font-size: 30px;
+}
+
+.places__delete-all-img
+{
+    vertical-align: middle;
+}
+
+.search__input
+{
+    width: 400px;
+    margin-bottom: 20px;
+}
+
+.create-place__name
+{
+    width: 330px;   
+}
+
 .search,
 .create-place
 {
@@ -38,6 +59,17 @@
 
 .places__list-one-place
 {
+    margin: 20px 0;
     display: flex;
     justify-content: center;
+
+}
+
+.places__delete-one-img,
+.places__edit-one-img,
+.places__save-img,
+.places__close-img
+{
+    width: 15px;
+    height: 15px;
 }
