Решение без изменения порядка и изменения мест

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,9 +1,12 @@
 .page {
     padding: 15px;
+    margin: 0 auto;
+    max-width: 600px;
     font-size: 1.5rem;
 }
 
 .page__main {
+    min-height: 400px;
     margin-top: 20px;
     margin-bottom: 20px;
 }
