--- a/src/components/App/common.css
+++ b/src/components/App/common.css
@@ -36,10 +36,13 @@ body {
 }
 
 h1,
-h2,
-.header1,
-.header2 {
+.header1 {
     font-size: 2.6rem;
+}
+
+h2,
+.header2 {
+    font-size: 2.2rem;
 }
 
 h3,
@@ -91,4 +94,10 @@ a:hover,
     content: '';
     clear: both;
     display: table;
+}
+
+.text_ellipsis {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
