--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,9 +1,12 @@
 .main__search {
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-top: 30px;
 }
 
 .main__place-form {
     margin-top: 20px;
     margin-bottom: 10px;
+}
+
+.places-table__loader {
+    margin-top: 20px;
 }
