--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -162,6 +162,8 @@
 .error-message
 {
     position: absolute;
+    margin-right: 30px;
+    right: 0;
     width: 120px;
     border: 2px solid #950000;
     background-color: #fff;
