--- a/public/style.css
+++ b/public/style.css
@@ -1,26 +1,26 @@
 body
 {
-    text-align: center;
-    padding: 50px;
+    padding: 50px 5%;
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 .page
 {
     background-color: #eefbfd;
-    display: inline-block;
+    margin: auto;
     text-align: initial;
-    min-width: 600px;
+    padding: 20px;
+    width: 600px;
     box-shadow: 0 0 5px #000;
+    border: 1px solid #000;
+    overflow: hidden;
 }
 
-.main,
-.footer
+button,
+input,
+label
 {
-    height: 100%;
-    border-style: solid;
-    border-width: 1px 1px 0 1px;
-    padding: 10px;
+    cursor: pointer;
 }
 
 .search
@@ -60,11 +60,15 @@ body
     border-radius: 5px;
 }
 
-.create-place__btn-create
-{
-    border-radius: 5px;
-    background-color: rgb(247, 247, 247);
-    cursor: pointer;
+.btn_type_normal {
+    background: #00ff37;
+    border: none;
+    border-radius: 20px;
+}
+
+.input_type_normal {
+    padding: 5px;
+    border: none;
 }
 
 .places__header
@@ -91,8 +95,6 @@ body
 .places__btn-not-visited,
 .places__btn-visited
 {
-    cursor: pointer;
-    background: none;
     border: solid black 1px;
 }
 
@@ -124,11 +126,11 @@ body
 .places__place
 {
     display: flex;
-    padding-right: 50px;
+    align-items: baseline;
 }
 
 .places__place-name,
-.places .edit-field
+.edit-field
 {
     flex-grow: 1;
     margin-right: 10px;
@@ -136,7 +138,12 @@ body
 
 .places__place-name
 {
-    padding: 3px;
+    font-size: 1.5em;
+}
+
+.places__place-name_checked {
+    text-decoration: line-through;
+    color: rgb(107, 107, 107);
 }
 
 .places__move-buttons
@@ -160,21 +167,22 @@ body
     visibility: hidden;
 }
 
-.btn-float
+.btn_type_float
 {
     background: none;
     border: solid rgba(255, 255, 255, 0) 1px;
     border-radius: 2px;
 }
 
-.btn-float:hover
+.btn_type_float:hover
 {
     border: solid grey 1px;
 }
 
 .footer
 {
+    padding-top: 20px;
     display: flex;
     justify-content: space-between;
-    border-bottom-width: 1px;
+    border-top: 1px solid #000;
 }
