--- a/public/common/footer/footer.css
+++ b/public/common/footer/footer.css
@@ -1,9 +1,6 @@
 .footer
 {
-    border-width: 1px 2px;
-    border-style: solid;
-    border-color: #ddd;
-    border-bottom-width: 2px;
+    border-top: 2px solid #ddd;
     padding: 20px 30px;
     font-weight: bold;
     display: flex;
