--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,12 +3,12 @@
 <head>
     <meta charset="{{ meta.charset }}">
     <title>{{ title }}</title>
-    <link rel="stylesheet" type="text/css" href="/css/index.css">
+    <link rel="stylesheet" type="text/css" href="/common/index.css">
 </head>
 <body>
     <main class="main">
         {{>search}}
-        {{>place-creator}}
+        {{>placeCreator}}
         {{>places}}
         {{>footer}}
     </main>
