--- a/public/style.css
+++ b/public/style.css
@@ -19,7 +19,7 @@ main
 }
 
 .search
-{ 
+{
     width: 440px;
     padding: 20px 0 5px 8px;
     margin: 15px 0;
@@ -46,7 +46,7 @@ main
 {
     width: 68px;
     height: 35px;
-    margin: 0px 26px;
+    margin: 0 26px;
     outline: none;
     font-size: 14px;
     border-radius: 15px;
@@ -56,7 +56,7 @@ main
 
 .place-creater__button:active
 {
-     background: rgba(36, 29, 29, .1);
+    background: rgba(36, 29, 29, .1);
 }
 
 .place-editor
@@ -65,9 +65,10 @@ main
     width: 444px;
     align-items: flex-end;
     justify-content: space-between;
-    padding:  0 0 10px 0;
+    padding: 0 0 10px;
     border-bottom: 1px solid #000;
 }
+
 .basket
 {
     display: flex;
@@ -103,11 +104,11 @@ main
     background: rgba(255, 255, 255, 0);
 }
 
-.tabs__input_all-places:checked ~ .tabs__label[for="all-places"],
-.tabs__input_vizited-places:checked  ~ .tabs__label[for="visited-places"],
-.tabs__input_unvizited-places:checked  ~ .tabs__label[for="unvisited-places"]
+.tabs__input_all-places:checked ~ .tabs__label[for='all-places'],
+.tabs__input_vizited-places:checked ~ .tabs__label[for='visited-places'],
+.tabs__input_unvizited-places:checked ~ .tabs__label[for='unvisited-places']
 {
-    background: rgba(255, 0, 0, .2)
+    background: rgba(255, 0, 0, .2);
 }
 
 .tabs__label_all-places
@@ -117,13 +118,13 @@ main
 
 .tabs__label_vizited-places
 {
-    border-left: none;
-    border-right: none;
+    border-radius: 0 10px 10px 0;
 }
 
 .tabs__label_unvizited-places
 {
-    border-radius: 0 10px 10px 0;
+    border-left: none;
+    border-right: none;
 }
 
 .places
@@ -134,6 +135,17 @@ main
     border: 1px solid black;
 }
 
+.places__item:last-child .place__arow_bottom,
+.places__item:first-child .place__arow_top
+{
+    display: none;
+}
+
+.place__arow
+{
+    cursor: default;
+}
+
 .places__item
 {
     height: 60px;
@@ -142,6 +154,11 @@ main
     align-items: center;
     justify-content: space-between;
     border: 1px solid black;
+}
+
+.hidden
+{
+    display: none;
 }
 
 .places__control
@@ -186,6 +203,16 @@ main
 
     overflow: hidden;
     text-overflow: ellipsis;
+}
+
+.places__changes-control
+{
+    justify-content: space-around;
+}
+
+.control_hidden 
+{
+    display: none;
 }
 
 .footer
