--- a/views/index.html
+++ b/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <script type="module" src="script.js"></script>
 </head>
 <body>
     <main>
@@ -21,10 +21,10 @@
             <section class="tabs">
                 <input type="radio" name="sorting-places" id="all-places" class="tabs__input tabs__input_all-places" checked hidden>
                 <label for="all-places" class="tabs__label tabs__label_all-places">Все</label>
-                <input type="radio" name="sorting-places" id="visited-places" class="tabs__input tabs__input_vizited-places" hidden>
-                <label for="visited-places" class="tabs__label tabs__label_vizited-places">Посетить</label>
                 <input type="radio" name="sorting-places" id="unvisited-places" class="tabs__input tabs__input_unvizited-places" hidden>
-                <label for="unvisited-places" class="tabs__label tabs__label_unvizited-places">Посещенные</label>
+                <label for="unvisited-places" class="tabs__label tabs__label_unvizited-places ">Посетить</label>
+                <input type="radio" name="sorting-places" id="visited-places" class="tabs__input tabs__input_vizited-places" hidden>
+                <label for="visited-places" class="tabs__label tabs__label_vizited-places">Посещенные</label>
             </section>
         </article >
         <section class="places">
