--- a/client/place/place.css
+++ b/client/place/place.css
@@ -35,6 +35,7 @@
 }
 
 .action {
+    display: none;
     color: #888;
     transition: color 300ms ease-in-out;
     cursor: pointer;
@@ -47,5 +48,9 @@
 
 .action:hover {
     color: #fb0;
+}
+
+.place:hover .action {
+    display: inline-block;
 }
 
