--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,6 +4,7 @@
     <meta charset="{{ meta.charset }}">
     <title>{{ title }}</title>
     <link rel="stylesheet" type="text/css" href="/common/index.css">
+    <script async src="/common/index.js"></script>
 </head>
 <body>
     <main class="main">
