--- a/public/common/place-creator/place-creator__btn/place-creator__btn.css
+++ b/public/common/place-creator/place-creator__btn/place-creator__btn.css
@@ -11,12 +11,12 @@
     background-image: linear-gradient(-180deg, #34d058 0%, #28a745 90%);
 }
 
-.place-creator_btn:hover
+.place-creator__btn:hover
 {
     box-shadow: inset 0px 0px 6px 0px rgba(0, 0, 0, 0.4);
 }
 
-.place-creator_btn:active
+.place-creator__btn:active
 {
     box-shadow: inset 0px 0px 10px 0px rgba(0, 0, 0, 0.6);
 }
